--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@tanstack/react-query": "^5.51.23",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.12",
-    "expo": "~51.0.26",
+    "expo": "~51.0.28",
     "expo-crypto": "~13.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.21",
+    "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -45,7 +45,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "@stripe/stripe-react-native": "0.37.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
