--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.7",
-    "@stripe/stripe-react-native": "0.37.2"
+    "@stripe/stripe-react-native": "0.37.2",
+    "expo-notifications": "~0.28.15",
+    "expo-device": "~6.0.2",
+    "expo-constants": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
